--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.12.20",
     "framer-motion-3d": "^10.12.20",
     "jotai": "^2.2.2",
+    "prettier": "^3.0.0",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
